style(docs): improve formatting and add code quality standards

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -6,10 +6,10 @@ OAuth2/OpenID Connect authentication service for home labs. Spring Boot + Postgr
 
 **Tech Stack:**
 
-- Backend: Spring Boot 3.5.4, Java 21, PostgreSQL, JWT+TOTP 2FA
-- Frontend: Bootstrap 5 + jQuery (no build process)
-- Deploy: Docker Compose, multi-stage builds
-- Dev: Spring DevTools, auto-start containers
+-   Backend: Spring Boot 3.5.4, Java 21, PostgreSQL, JWT+TOTP 2FA
+-   Frontend: Bootstrap 5 + jQuery (no build process)
+-   Deploy: Docker Compose, multi-stage builds
+-   Dev: Spring DevTools, auto-start containers
 
 ## Key Architecture
 
@@ -31,17 +31,17 @@ OAuth2/OpenID Connect authentication service for home labs. Spring Boot + Postgr
 
 ### Backend (Spring Boot)
 
-- **Controllers**: `@RestController` with `/api/*` paths, DTOs, `@PreAuthorize("hasRole('ADMIN')")`
-- **Services**: `@Service` + `@Transactional`, business logic separation
-- **Security**: JWT (24h) + refresh tokens (7d), TOTP with QR codes
-- **Entities**: `User` entity with roles Set<Role>, JPA relationships
+-   **Controllers**: `@RestController` with `/api/*` paths, DTOs, `@PreAuthorize("hasRole('ADMIN')")`
+-   **Services**: `@Service` + `@Transactional`, business logic separation
+-   **Security**: JWT (24h) + refresh tokens (7d), TOTP with QR codes
+-   **Entities**: `User` entity with roles Set<Role>, JPA relationships
 
 ### Frontend (Vanilla JS)
 
-- **Structure**: jQuery + Bootstrap modals, no frameworks
-- **Auth**: localStorage tokens, fetch() with Bearer headers
-- **UI**: Form validation, loading states, error/success messages
-- **Functions**: Grouped by feature (auth, user management, utilities)
+-   **Structure**: jQuery + Bootstrap modals, no frameworks
+-   **Auth**: localStorage tokens, fetch() with Bearer headers
+-   **UI**: Form validation, loading states, error/success messages
+-   **Functions**: Grouped by feature (auth, user management, utilities)
 
 ### API Patterns
 
@@ -59,10 +59,10 @@ headers: {'Authorization': `Bearer ${authToken}`}
 
 ## Development Workflow
 
-- **Start**: `./dev-start.sh` (auto-starts PostgreSQL via Spring Boot Docker Compose)
-- **Frontend**: Edit `admin-dashboard.js` → refresh browser (immediate changes)
-- **Backend**: Spring DevTools hot reload on Java changes
-- **Testing**: JUnit 5 + Testcontainers for integration tests
+-   **Start**: `./dev-start.sh` (auto-starts PostgreSQL via Spring Boot Docker Compose)
+-   **Frontend**: Edit `admin-dashboard.js` → refresh browser (immediate changes)
+-   **Backend**: Spring DevTools hot reload on Java changes
+-   **Testing**: JUnit 5 + Testcontainers for integration tests
 
 ## Common Tasks
 
@@ -80,17 +80,27 @@ headers: {'Authorization': `Bearer ${authToken}`}
 
 ## Key Dependencies
 
-- `spring-boot-starter-oauth2-authorization-server` - OAuth2 support
-- `io.jsonwebtoken:jjwt-*` - JWT handling
-- `dev.samstevens.totp:totp` - 2FA implementation
-- `spring-boot-docker-compose` - Auto-start containers
-- `springdoc-openapi-starter-webmvc-ui` - API docs
+-   `spring-boot-starter-oauth2-authorization-server` - OAuth2 support
+-   `io.jsonwebtoken:jjwt-*` - JWT handling
+-   `dev.samstevens.totp:totp` - 2FA implementation
+-   `spring-boot-docker-compose` - Auto-start containers
+-   `springdoc-openapi-starter-webmvc-ui` - API docs
 
 ## Security Notes
 
-- JWT + refresh token flow, role-based access (`USER`/`ADMIN`)
-- TOTP secrets encrypted in database
-- Password policies, account lockout
-- All admin operations require `ADMIN` role
+-   JWT + refresh token flow, role-based access (`USER`/`ADMIN`)
+-   TOTP secrets encrypted in database
+-   Password policies, account lockout
+-   All admin operations require `ADMIN` role
+
+## Code Quality Standards
+
+### Type Safety & Constants
+
+**Always prefer enums, records, and constants over hardcoded strings:**
+
+-   **Enums**: For fixed sets of values (browser types, OS types, device types, user roles)
+-   **Records**: For immutable data structures (DTOs, value objects)
+-   **Constants**: For string literals used multiple times
 
 **Philosophy**: Keep it simple and maintainable. No complex architectures.
